--- a/indexes.html
+++ b/indexes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Santhosh Sk's site</title>
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
