--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
 <body>
   <div class="top">
-    <img class="top-cloud" src="./cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="cloud.png" alt="cloud-image">
     <h1 class="">I'm Santhosh Sk .</h1>
     <h2 class="intro">a Graphical Designer.</h2>
-    <img class="bottom-cloud" src="./cloud.png" alt="cloud-image">
-    <img class="mountain" src="./mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+    <img class="mountain" src="mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="./profile-modified.png" alt="profile-pic">
+      <img src="profile-modified.png" alt="profile-pic">
       <h2>Hi</h2>
       <p class="intro-description">I'm Santhosh Sk. I'm a passionate designing and  pursuing my bachelor's degree in Computer Technology. I like front-end development, databases and UI Designing.</p>
     </div>
