--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="skill-row">
         <iframe src="https://giphy.com/embed/n6mEMqAuYOQ8l8qcEE" frameBorder="0" class="skill-data" allowFullScreen></iframe>
 
-        <h3 class="h3-skill2">Data Engineering</h3>
+        <h3 class="h3-skill2">Data Base</h3>
         <p class="data-skill-description">I'm very exited to work with database to know how our data are collected and stored then how it is used, and how data is protected..</p>
       </div>
     </div>
